--- a/main.tex
+++ b/main.tex
@@ -105,8 +105,9 @@
 %%  BEGINING OF USER COSTUMIZATION
 %%
 %%============================================================
-
-
+% Default
+%\DeclareMathSizes{12}{12}{8}{6}
+\DeclareMathSizes{12}{12}{11}{10}
 %------------------------------------------------------------------
 % IMPORTANT --- LICENSING 
 %------------------------------------------------------------------
