Fix latest issues  - Fixed frontpage, statement of integrity, copyright pagination  - Fixed tables, figures, listings, algorithms, and equations numbering  - Fixed abstract order (Portuguese always first, regardless of the language);  NOTE: the titles in the abstract have to be typed in .. still

--- a/main.tex
+++ b/main.tex
@@ -106,16 +106,16 @@
 %%
 %%============================================================
 
-\renewcommand*{\glossariescaptionsportuges}{%
-\renewcommand*{\glossaryname}{Glossário}%
-\renewcommand*{\acronymname}{Lista de Acrónimos}%
-\renewcommand*{\entryname}{Notação}%
-\renewcommand*{\descriptionname}{Descri\c c\~ao}%
-\renewcommand*{\symbolname}{Símbolo}%
-\renewcommand*{\pagelistname}{Lista de Páginas}%
-\renewcommand*{\glssymbolsgroupname}{Símbolos}%
-\renewcommand*{\glsnumbersgroupname}{Números}%
-}%
+%\renewcommand*{\glossariescaptionsportuges}{%
+%\renewcommand*{\glossaryname}{Glossário}%
+%\renewcommand*{\acronymname}{Lista de Acrónimos}%
+%\renewcommand*{\entryname}{Notação}%
+%\renewcommand*{\descriptionname}{Descri\c c\~ao}%
+%\renewcommand*{\symbolname}{Símbolo}%
+%\renewcommand*{\pagelistname}{Lista de Páginas}%
+%\renewcommand*{\glssymbolsgroupname}{Símbolos}%
+%\renewcommand*{\glsnumbersgroupname}{Números}%
+%}%
 
 
 % Default
