Update template PDF

--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 
 % The default option marked with (*)
 \documentclass[
-  docdegree=mscplan,        % phd(*), phdplan, phdprop, msc, mscplan, bsc
+  docdegree=msc,        % phd(*), phdplan, phdprop, msc, mscplan, bsc
   school=um/eeng,      % um/eeng, um/emed, um/ec 
   lang=pt,              % en(*), fr, it, pt
   %coverlang=en,         % defaults to main language
