Remove end of chapter bibliography

--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@
   oneside
 ]{novathesis}
 
-\defbibheading{subbibliography}{\section*{References for Chapter \ref{refsection:\therefsection}}}
+% \defbibheading{subbibliography}{\section*{References for Chapter \ref{refsection:\therefsection}}}
 
 %%============================================================
 %%
@@ -364,9 +364,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printchapthers    % Print document chapters
-\printbibheading\printbibliography[section=1,heading=subbibliography]
+%\printbibheading\printbibliography[section=1,heading=subbibliography]
 %\printbibliography[section=2,heading=subbibliography]
-%\printbib    % Print the bibliography
+\printbib    % Print the bibliography
 % \printotherlists   % Alternative location to print the other lists (if you uncomment this one, comment the other one above)
 \printotherlists   % If option 'otherlistsat=back', print other lists of contents according to instructions given above, otherwise do nothing
 \printappendixes  % Print appendixes, if any!
